--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
   <link href="css/grayscale.min.css" rel="stylesheet">
   <script src="js/global.js"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133746696-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133746696-2');
+  </script>
+
 </head>
 
 <body id="page-top">
